--- a/styles.css
+++ b/styles.css
@@ -50,11 +50,13 @@
   /* Base styles for the body */
   body {
       font-family: Arial, sans-serif;
-/*      display: flex;*/
+
       justify-content: center;
+      flex-wrap: wrap;
       align-items: center;
-      /*height: 100vh;*/
-      margin: 0;
+      /*display: flex;*/
+  
+      margin: 16 px;
       background-color: var(--clr-light);
       color: var(--hacker_black);
       transition: background-color 0.3s, color 0.3s;
@@ -79,6 +81,7 @@
   h2 {
     margin-bottom: 20px;
         color: var(--Islamic_green);
+      align-items: center;
 }
   
   /* Styles for the toggle container */
