--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@
       margin-bottom: 20px;
           color: var(--Islamic_green);
   }
-  h2 {
+  h2, h3 {
     margin-bottom: 20px;
         color: var(--Islamic_green);
       align-items: center;
